Added add to playlist

--- a/Frontend/youRJube/src/app/app.component.html
+++ b/Frontend/youRJube/src/app/app.component.html
@@ -70,8 +70,8 @@
           </div>
           
           <a (click)="switchAccount()"><i class="fa fa-users fa-fw" aria-hidden="true"></i>Switch Account</a>
-          <a routerLink="/premium-membership"><i class="fa fa-tag fa-fw" aria-hidden="true"></i>Premium Membership</a>
-          <a><i class="fa fa-user fa-fw" aria-hidden="true"></i>Your Channel</a>
+          <a routerLink="premium-membership"><i class="fa fa-tag fa-fw" aria-hidden="true"></i>Premium Membership</a>
+          <a href="watch/{{userChannel.id}}"><i class="fa fa-user fa-fw" aria-hidden="true"></i>Your Channel</a>
           <a><i class="fa fa-exclamation-triangle fa-fw" aria-hidden="true"></i>Restricted Mode</a>
           <a><i class="fa fa-map-marker fa-fw" aria-hidden="true"></i>Change Location</a>
           <a (click)="showKeyboardShortcut()"><i class="fa fa-keyboard-o fa-fw" aria-hidden="true"></i>Keyboard Shortcut</a>
