--- a/Frontend/youRJube/src/app/copyright/copyright.component.html
+++ b/Frontend/youRJube/src/app/copyright/copyright.component.html
@@ -1,1 +1,17 @@
-<p>copyright works!</p>
+<div class="container">
+    <div class="title">
+        Copyright
+    </div>
+
+    <div class="copyright">
+        Our first rule is to make sure that
+        <br>
+        the video you are uploading is
+        <br>
+        indeed your own work of creation
+        <br>
+        make sure your work is not 
+        <br>
+        other user's work.
+    </div>
+</div>
