--- a/Frontend/youRJube/src/app/privacy/privacy.component.html
+++ b/Frontend/youRJube/src/app/privacy/privacy.component.html
@@ -1,1 +1,19 @@
-<p>privacy works!</p>
+<div class="container">
+    <div class="title">
+        Privacy Policy
+    </div>
+
+    <div class="privacy">
+        We understand that when you are
+        <br>
+        using our service, you are trusting us
+        <br>
+        with your information.
+        <br>
+        We understand that this is a big responsibility
+        <br>
+        and we will work hard to protect
+        <br>
+        your information and put you in control
+    </div>
+</div>
