--- a/Frontend/youRJube/src/app/terms/terms.component.html
+++ b/Frontend/youRJube/src/app/terms/terms.component.html
@@ -1,1 +1,17 @@
-<p>terms works!</p>
+<div class="container">
+    <div class="title">
+        Welcome to youRJube!
+    </div>
+
+    <div class="terms1">
+        Our terms is to be friend to others
+
+        <br>
+
+        Make sure your content is your own
+
+        <br>
+
+        Make sure your content is appropriate
+    </div>
+</div>
