--- a/Frontend/youRJube/src/app/trending/trending.component.html
+++ b/Frontend/youRJube/src/app/trending/trending.component.html
@@ -2,7 +2,7 @@
     <h3 class="trending-title">Trending Video</h3>
 
     <div class="trending-video-container">
-        <app-video-display *ngFor="let v of videos" [vid]="v"></app-video-display>
+        <app-second-video-display *ngFor="let v of videos" [vid]="v"></app-second-video-display>
     </div>
 
 </div>
