--- a/Frontend/youRJube/src/app/about-us/about-us.component.html
+++ b/Frontend/youRJube/src/app/about-us/about-us.component.html
@@ -1,1 +1,25 @@
-<p>about-us works!</p>
+<div class="container">
+
+    <div class="logo">
+        <img src="../../assets/logo2.jpg" alt="" width="250px">
+    </div>
+
+    <div class="about-us">
+        Our mission is to give everyone a voice
+        <br>
+        and show them to the world
+        
+
+    </div>
+
+    <div class="about-us2">
+        We believe that everyone deserves to have a 
+        <br>
+
+        voice, and that the world is a better place 
+        
+        <br>
+
+        when we listen, share and build community through our stories.
+    </div>
+</div>
