--- a/Frontend/youRJube/src/app/trending/trending.component.scss
+++ b/Frontend/youRJube/src/app/trending/trending.component.scss
@@ -2,12 +2,13 @@
 
     .trending-title{
         font-size: 20px;
+        margin-bottom: 2vh;
     }
 
     .trending-video-container{
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
-    
+        flex-direction: column;
     }
 }
