--- a/Frontend/youRJube/src/app/video-display/video-display.component.html
+++ b/Frontend/youRJube/src/app/video-display/video-display.component.html
@@ -5,17 +5,21 @@
         </div>
     </a>
     <div class="video-description-container">
-        <img src="{{channel[0].icon}}" alt="" width="50px" class="profile-pic">
-        <a href="watch">
+        <a href="channel/{{channel[0].id}}">
+            <img src="{{channel[0].icon}}" alt="" width="50px" class="profile-pic">
+        </a>
+        <a href="watch/{{video.id}}">
             <div class="content-container">
                 <div class="title">
                     {{video.title}}
                 </div>
                 <div class="channel-name">
-                    {{channel[0].name}}
+                    <a href="channel/{{channel[0].id}}">
+                        {{channel[0].name}}
+                    </a>
                 </div>
                 <div class="views-count">
-                    {{viewOutput}} views
+                    {{viewOutput}}
                 </div>
                 •
                 <div class="date-uploaded">
@@ -29,10 +33,63 @@
             </a>
 
             <div class="dropdown-content" id="video-settings-dropdown-{{video.id}}">
-                <a><i class="fa fa-list-ol" aria-hidden="true"></i>
-                    Add to queue</a>
-                <a *ngIf="isUserSignedIn()"><i class="fa fa-random" aria-hidden="true"></i>
-                    Add to playlist</a>
+                <a>
+                    <i class="fa fa-list-ol" aria-hidden="true"></i>
+                    Add to queue
+                </a>
+                <a *ngIf="isUserSignedIn()" (click)="showPlaylistModal()">
+                    <i class="fa fa-random" aria-hidden="true"></i>
+                    Add to playlist
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="playlist-modal" id="playlist-modal" *ngIf="showModal">
+    <div class="modal-content">
+
+        <div class="top">
+            <div class="left">
+                Save to..
+            </div>
+
+            <div class="right" (click)="hidePlaylistModal()">
+                &times;
+            </div>
+        </div>
+
+        <div class="center">
+            <ul>
+                <li *ngFor="let p of userPlaylist">
+                    <input type="checkbox" name="" id="user-playlist-{{p.id}}" (change)="addToPlaylist($event, p)" ng-checked="checkChecked()">
+                    <label for="user-playlist-{{p.id}}" class="unselectable">{{p.title}}</label>
+                </li>
+            </ul>
+        </div>
+
+        <div class="bottom">
+            <div class="create-new-playlist-button" id="create-new-playlist-button-{{video.id}}" (click)="toggleCreatePlaylist()">
+                <i class="fa fa-plus" aria-hidden="true"></i>
+                Create new playlist
+            </div>
+
+            <div class="title" id="ntitle-{{video.id}}">
+                <label for="nplaylist-title-{{video.id}}">Name</label>
+                <input type="text" name="" id="nplaylist-title-{{video.id}}" placeholder="Enter a playlist name..." (change)="playlist_title = $event.target.value">
+            </div>
+
+            <div class="privacy" id="nprivacy-{{video.id}}">
+                <label for="nplaylist-privacy-{{video.id}}">Privacy</label>
+                <select name="" id="nplaylist-privacy-{{video.id}}" (change)="changePrivacyValue($event)">
+                    <option value="None">Select one</option>
+                    <option value="Public">Public</option>
+                    <option value="Private">Private</option>
+                </select>
+            </div>
+
+            <div class="create-button" id="nbutton-{{video.id}}" (click)="createNewPlaylist()">
+                CREATE
             </div>
         </div>
     </div>
