--- a/Frontend/youRJube/src/app/app.component.scss
+++ b/Frontend/youRJube/src/app/app.component.scss
@@ -236,6 +236,7 @@
                 border-bottom: 1px lightgray solid;
                 text-align: left;
                 cursor: pointer;
+                font-size: 14px;
 
                 i{
                     margin-right: 0.1vw;
@@ -528,8 +529,6 @@
       }
       
   }
-  
-
   
   .close {
     color: #aaaaaa;
