--- a/Frontend/youRJube/src/app/second-video-display/second-video-display.component.scss
+++ b/Frontend/youRJube/src/app/second-video-display/second-video-display.component.scss
@@ -4,8 +4,10 @@
     margin: 1vh 0vw;
     margin-left: 2vw;
     cursor: pointer;
+    width: 60%;
 
     .right{
+        width: 100%;
         margin-left: 1vw;
 
         .top{
@@ -18,7 +20,7 @@
             .settings-button{
                 position: absolute;
                 font-weight: normal;
-                right: -5vw;
+                right: 0;
                 top: 0vh;
     
                 .settings-button-icon{
@@ -26,7 +28,7 @@
                     opacity: 0;
                     font-size: 20px;
                     color: gray;
-                    transition-duration: 0.3s;
+                    transition-duration: 0.3s; 
                 }
     
                 .dropdown-content {
@@ -100,9 +102,153 @@
             }
         }
     }
+
+    .right:hover{
+        .top{
+            .settings-button{
+                .settings-button-icon{
+                    opacity: 1;
+                    transition-duration: 0.3s;
+                }
+            }
+        }
+    }
 }
 
 a{
     text-decoration: none;
     color: black;
 }
+
+.playlist-modal{
+    visibility: hidden;
+    position: fixed; 
+    z-index: 3;
+    padding-top: 20vh;
+    padding-left: 10vw;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+    transition: ease;
+
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 12%;
+        max-height: 70vh;
+
+        .top{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            padding-bottom: 1.5vh;
+            border-bottom: 1px gray solid;
+
+            .right{
+                cursor: pointer;
+                font-size: larger;
+            }
+        }
+
+        .center{
+            height: 30vh;
+            display: flex;
+            flex-direction: column;
+            overflow-y: auto;
+            padding-left: 0.5vw;
+            padding-top: 1vh;
+
+            ul{
+                list-style: none;
+                padding: 0;
+
+                li{
+                    margin: 2vh 0;
+
+                    input{
+                        transform: scale(1.5);
+                        margin-right: 1vw;
+                    }
+                }
+            }
+        }
+
+        .bottom{
+            margin-top: 1vh;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+
+            .create-new-playlist-button{
+                cursor: pointer;
+            }
+
+            .title{
+                display: none;
+                flex-direction: column;
+                align-self: flex-start;
+                margin-top: 1vh;
+
+                label{
+                    font-size: 14px;
+                }
+
+                input{
+                    padding: 8px 16px;
+                    font-size: 14px;
+                    outline: 0;
+                    border: none;
+                    border-bottom: 2px lightgray solid;
+                    transition-duration: 0.3s;
+                }
+
+                input:focus{
+                    border-color: black;
+                    transition-duration: 0.3s;
+                }
+                
+            }
+
+            .privacy{
+                display: none;
+                flex-direction: column;
+                align-self: flex-start;
+                margin-top: 1vh;
+
+                label{
+                    font-size: 14px;
+                }
+
+                select{
+                    padding: 8px 16px;
+                    font-size: 14px;
+                    outline: 0;
+                    border: none;
+                    border-bottom: 2px lightgray solid;
+                    transition-duration: 0.3s;
+
+                }
+
+                select:focus{
+                    border-color: black;
+                    transition-duration: 0.3s;
+                }
+            }
+
+            .create-button{
+                display: none;
+                margin-top: 2vh;
+                color: blueviolet;
+                align-self: flex-end;
+                cursor: pointer;
+            }
+        }
+    }
+}
+
