--- a/Frontend/youRJube/src/app/video-watch/video-watch.component.scss
+++ b/Frontend/youRJube/src/app/video-watch/video-watch.component.scss
@@ -69,6 +69,8 @@ $width: 55vw;
 
                     }
 
+
+
                     .like-dislike-ratio{
                         width: 100%;
                         height: 3px;
@@ -150,6 +152,22 @@ $width: 55vw;
                         padding: 8px 16px;
                         font-size: 14px;
                         font-weight: bolder;
+                        margin-right: 1vw;
+                        cursor: pointer;
+                    }
+
+                    .subscribe-button2{
+                        color: gray;
+                        background-color: rgb(236, 225, 225);
+                        padding: 8px 16px;
+                        font-size: 14px;
+                        font-weight: bolder;
+                        margin-right: 1vw;
+                        cursor: pointer;
+                    }
+
+                    .bell-button{
+                        cursor: pointer;
                     }
 
                     i{
@@ -217,7 +235,7 @@ $width: 55vw;
                     input{
                         padding: 8px 16px;
                         font-size: 16px;
-                        width: 40vw;
+                        width: 35vw;
                         outline: 0;
                         border: none;
                         border-bottom: 2px lightgray solid;
@@ -261,5 +279,212 @@ $width: 55vw;
 
     .related-video{
         flex: 3;
+    }
+}
+
+.playlist-modal{
+    visibility: hidden;
+    position: fixed; 
+    z-index: 3;
+    padding-top: 20vh;
+    padding-left: 10vw;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+    transition: ease;
+
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 12%;
+        max-height: 70vh;
+
+        .top{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            padding-bottom: 1.5vh;
+            border-bottom: 1px gray solid;
+
+            .right{
+                cursor: pointer;
+                font-size: larger;
+            }
+        }
+
+        .center{
+            height: 30vh;
+            display: flex;
+            flex-direction: column;
+            overflow-y: auto;
+            padding-left: 0.5vw;
+            padding-top: 1vh;
+
+            ul{
+                list-style: none;
+                padding: 0;
+
+                li{
+                    margin: 2vh 0;
+
+                    input{
+                        transform: scale(1.5);
+                        margin-right: 1vw;
+                    }
+                }
+            }
+        }
+
+        .bottom{
+            margin-top: 1vh;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+
+            .create-new-playlist-button{
+                cursor: pointer;
+            }
+
+            .title{
+                display: none;
+                flex-direction: column;
+                align-self: flex-start;
+                margin-top: 1vh;
+
+                label{
+                    font-size: 14px;
+                }
+
+                input{
+                    padding: 8px 16px;
+                    font-size: 14px;
+                    outline: 0;
+                    border: none;
+                    border-bottom: 2px lightgray solid;
+                    transition-duration: 0.3s;
+                }
+
+                input:focus{
+                    border-color: black;
+                    transition-duration: 0.3s;
+                }
+                
+            }
+
+            .privacy{
+                display: none;
+                flex-direction: column;
+                align-self: flex-start;
+                margin-top: 1vh;
+
+                label{
+                    font-size: 14px;
+                }
+
+                select{
+                    padding: 8px 16px;
+                    font-size: 14px;
+                    outline: 0;
+                    border: none;
+                    border-bottom: 2px lightgray solid;
+                    transition-duration: 0.3s;
+
+                }
+
+                select:focus{
+                    border-color: black;
+                    transition-duration: 0.3s;
+                }
+            }
+
+            .create-button{
+                display: none;
+                margin-top: 2vh;
+                color: blueviolet;
+                align-self: flex-end;
+                cursor: pointer;
+            }
+        }
+      }
+}
+
+.share-modal{
+    visibility: hidden;
+    position: fixed; 
+    z-index: 3;
+    padding-top: 30vh;
+    padding-left: 10vw;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+    transition: ease;
+
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 25%;
+        max-height: 70vh;
+
+        .top{
+            display: flex;
+            justify-content: space-between;
+
+            .right{
+                font-size: large;
+                cursor: pointer;
+            }
+        }
+
+        .center{
+            padding: 1vh 2vw 1vh 1vw;
+            background-color: rgb(236, 234, 230);
+            margin-top: 2vh;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+
+            input{
+                background-color: rgb(236, 234, 230);
+                font-size: 13px;
+                padding: 6px 6px;
+                width: 80%;
+                outline: none;
+                border: none;
+            }
+
+            .copy-button{
+                display: flex;
+                align-self: center;
+                justify-content: center;
+                text-align: center;
+                color: blueviolet;
+                cursor: pointer;
+                margin-left: 1vw;
+            }
+        }
+
+        .bottom{
+            border-top: 1px gray solid;
+            margin-top: 3vh;
+            padding-left: 1vw;
+            padding-top: 2vh;
+
+            input{
+                transform: scale(1.5);
+                margin-right: 1vw;
+            }
+        }
+     
     }
 }
