--- a/Frontend/youRJube/src/app/app.component.scss
+++ b/Frontend/youRJube/src/app/app.component.scss
@@ -135,6 +135,7 @@
         a{
             text-align: center;
             cursor: pointer;
+            font-size: 14px;
     
             i{
                 font-size: 28px;
@@ -529,6 +530,61 @@
       }
       
   }
+
+.select-country {
+visibility: hidden;
+position: fixed; 
+z-index: 3;
+padding-top: 20vh;
+left: 0;
+top: 0;
+width: 100%; 
+height: 100%;
+background-color: rgb(0,0,0);
+background-color: rgba(0,0,0,0.4); 
+transition: ease;
+
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 20%;
+        max-height: 70vh;
+        
+        .top{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+
+            .right{
+                font-size: 20px;
+                cursor: pointer;
+            }
+        }
+
+        .center{
+            overflow-y: auto;
+            margin-top: 3vh;
+            text-align: center;
+            
+            select{
+                font-size: 16px;
+                padding: 8px 8px;
+                outline: 0;
+                border: none;
+                border-bottom: 1px blueviolet solid;
+
+                option{
+                    padding: 6px;
+                }
+            }
+        }
+    
+    }
+    
+}
   
   .close {
     color: #aaaaaa;
