--- a/Frontend/youRJube/src/app/channel/channel.component.html
+++ b/Frontend/youRJube/src/app/channel/channel.component.html
@@ -52,31 +52,35 @@
         <div class="profile-bottom">
             <ul>
                 <li>
-                    <a>
+                    <a routerLink="home">
                         HOME
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a routerLink="videos">
                         VIDEOS
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a routerLink="playlist">
                         PLAYLISTS
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a routerLink="community">
                         COMMUNITY
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a routerLink="about">
                         ABOUT
                     </a>
                 </li>
             </ul>
         </div>
+    </div>
+
+    <div class="content">
+        <router-outlet></router-outlet>
     </div>
 </div>
