--- a/Frontend/youRJube/src/app/video-watch/video-watch.component.html
+++ b/Frontend/youRJube/src/app/video-watch/video-watch.component.html
@@ -82,7 +82,7 @@
                     </div>
                 </div>
 
-                <div class="subscribe-container">
+                <div class="subscribe-container" *ngIf="channel.id != userChannel.id">
                     <a>
                         <div class="subscribe-button" (click)="subscribeToChannel()" *ngIf="userSubCondition == 0">
                             SUBSCRIBE
@@ -123,7 +123,20 @@
                 <a>
                     <div class="sort-options">
                         <i class="fa fa-sort-amount-desc" aria-hidden="true"></i>
-                        SORT BY
+                        <span (click)="toggleSortBy()">                        
+                            SORT BY
+                        </span>
+
+                        <div class="dropdown-content" id="sortby-options">
+                            <ul>
+                                <li (click)="sortCommentByLike()">
+                                    Top Liked
+                                </li>
+                                <li (click)="sortCommentByNewest()">
+                                    Newest
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </a>
             </div>
@@ -162,8 +175,8 @@
 
     </div>
     
-    <div class="related-video">
-        <app-video-related *ngFor="let v of videos" [vid]="v"></app-video-related>
+    <div class="related-video" *ngIf="relatedVideoLoaded">
+        <app-video-related *ngFor="let v of relatedVideos" [vid]="v"></app-video-related>
     </div>
 </div>
 
@@ -189,7 +202,7 @@
             </ul>
         </div>
 
-        <div class="bottom">
+        <div class="bottom" *ngIf="doneLoading">
             <div class="create-new-playlist-button" id="create-new-playlist-button2-{{video.id}}" (click)="toggleCreatePlaylist()">
                 <i class="fa fa-plus" aria-hidden="true"></i>
                 Create new playlist
