--- a/Frontend/youRJube/src/app/video-watch/video-watch.component.scss
+++ b/Frontend/youRJube/src/app/video-watch/video-watch.component.scss
@@ -217,6 +217,30 @@ $width: 55vw;
                             font-size: 20px;
                             margin-right: 0.25vw;
                         }
+
+                        .dropdown-content{
+                            visibility: hidden;
+                            background-color: white;
+                            width: 8vw;
+                            padding: 0.5vh 0;
+                            position: absolute;
+                            box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
+
+                            ul{
+                                list-style: none;
+                                padding: 0;
+
+                                li{
+                                    display: block;
+                                    font-size: 15px;
+                                    padding: 10px 18px;
+                                }
+
+                                li:hover{
+                                    background-color: lightgray;
+                                }
+                            }
+                        }
                     }
                 }
             }
