--- a/Frontend/youRJube/src/app/second-video-display/second-video-display.component.html
+++ b/Frontend/youRJube/src/app/second-video-display/second-video-display.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="left">
         <a href="watch/{{video.id}}">
-            <img src="{{video.thumbnail}}" alt="" width="300px">
+            <img src="{{video.thumbnail}}" alt="" width="300px" height="168.75px">
         </a>
     </div>
 
