--- a/Frontend/youRJube/src/app/app.component.html
+++ b/Frontend/youRJube/src/app/app.component.html
@@ -114,7 +114,7 @@
       </li>
       <li *ngFor="let p of userPlaylist">
         <a routerLink="playlist/{{p.id}}" *ngIf="isUserSignedIn() && playlistLoaded" class="" id="playlistButton-{{p.id}}" (click)="changeActive($event)">
-          <span class="icon"><i class="fa fa-random fa-fw" aria-hidden="true"></i></span>
+          <span class="icon"><i class="fa fa-list-ul" aria-hidden="true"></i></span>
           <span class="title">{{p.title}}</span>
         </a>
       </li>
